--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
     repositories {
         mavenCentral()
         maven {
+            url = "https://jcenter.bintray.com/"
+        }
+        maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
@@ -12,7 +15,9 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'com.anatawa12.forge:ForgeGradle:1.2-1.0.+') {
+            changing = true
+        }
     }
 }
 
