--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,9 @@ buildscript {
 plugins {
     id 'com.matthewprenger.cursegradle' version '1.0.7'
     id 'org.ajoberstar.grgit' version '1.3.2'
+    id 'forge'
 }
 
-apply plugin: 'forge'
 apply plugin: 'maven'
 
 ext.git = grgit.open(file('.'))
