--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ plugins {
     id 'org.ajoberstar.grgit' version '1.3.2'
 }
 
+apply plugin: 'forge'
 apply plugin: 'maven'
 
 ext.git = grgit.open(file('.'))
