--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
-on:
-  push:
-    branches: [ 1.7 ]
-  pull_request:
-    branches: [ 1.7 ]
+name: Java CI with Gradle
+
+on: [ push, pull_request ]
 
 jobs:
   build:
@@ -10,17 +8,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 8
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          java-version: '8'
-          distribution: 'zulu'
-      - name: Build with command Gradlew
-        run: ./gradlew build
-        
-      - name: Upload JAR file
-        uses: actions/upload-artifact@v3
+          java-version: 1.8
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew SetupCIWorkspace build -PuseCommitHashInVersion
+      - uses: actions/upload-artifact@v2
         with:
-          name: VeinMiner
-          path: build/libs/*.jar
+          name: VeinMiner-1.7.10
+          path: build/libs
