--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ if(System.getenv("BUILD_NUMBER") != null) {
     buildNumber = System.getenv("BUILD_NUMBER")
 }
 
-version = "${config.minecraft_version}-${config.mod_version}.${ext.depth}+${ext.revision}"
+version = "${config.minecraft_version}-${config.mod_version}"
 
 processResources {
     from(sourceSets.main.resources.srcDirs) {
